@@ -1,3 +1,10 @@
+2011-02-22  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-get-file-version): new function
+	(clearcase-diff-with-diff): use `clearcase-get-file-version'
+	instead of `vc-find-file' -- avoids loading the versioned files in
+	Emacs
+
 2011-02-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (vc-clearcase): add link to documentation page 
